<resources>
    <string name="app_name">Gymodo</string>
    <string name="app_name_uppercase">GYMODO</string>
    <string name="hint_email">Email</string>
    <string name="button_login">Login</string>
    <string name="button_login_google">Google</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="button_register">Register</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Time_label">Start time - End time</string>
    <string name="reserve">RESERVE</string>
    <string name="add_diet">Add Diet</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_food">Add food</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="make_public">Make public?</string>
    <string name="explore_diets">Explore Diets</string>
    <string name="explore_workouts">Explore Workouts</string>
    <string name="home">Home</string>
    <string name="reservations">Reservations</string>
    <string name="workouts">Workouts</string>
    <string name="diets">Diets</string>
    <string name="make_reservations">Make Reservation</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="birthdate">Birthdate</string>
    <string name="weight">Weight (kg)</string>
    <string name="what_is_your_goal">What is your goal?</string>
    <string name="build_muscle">Build Muscle</string>
    <string name="lose_fat">Lose Fat</string>
    <string name="get_hardy">Get Hardy</string>
    <string name="my_diets">My diets</string>
    <string name="my_reservations">My Reservations</string>
    <string name="explore">Explore</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="already_have_account">Already have a account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="finish">FINISH</string>
    <string name="create_workout">Create Workout</string>
    <string name="available_series">Available Series</string>
    <string name="selected_series">Selected Series</string>
    <string name="create_serie">Create Serie</string>
    <string name="profile">PROFILE</string>
    <string name="save">SAVE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">SETTINGS</string>
    <string name="your_reservation">YOUR RESERVATION</string>
    <string name="admin">Admin</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="sodium">Sodium</string>
    <string name="visit_web">VISIT WEB</string>
    <string name="news">NEWS</string>
    <string name="new_post">NEW POST</string>
    <string name="new_post_lowercase">New post</string>
    <string name="post">POST</string>
    <string name="comments">COMMENTS</string>
    <string name="comment_hint">Add a comment</string>
    <string name="scan_again">Scan again</string>
    <string name="write_about_your_post">Write about your post...</string>
    <string name="logout">Logout</string>
    <string name="posts">Posts</string>
    <string name="profile2">Profile</string>
    <string name="settings2">Settings</string>
    <string name="news2">News</string>
</resources>