<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".fragments.diet.CreateDietFragment">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context=".AddDietActivity">

        <TextView
            android:gravity="center"
            android:id="@+id/AddDietTextTitle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/add_diet"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/name"
                android:id="@+id/AddDietTextInputName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/description"
                android:id="@+id/AddDietTextInputDescription"
                android:inputType="textMultiLine"
                android:layout_height="100dp"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/AddDietTextBreakfast"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/breakfast"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/AddDietTextBreakfastCalories"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                tools:text="300kcal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/AddDietBreakFastRecyclerView"
            android:layout_height="230dp"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:scrollbars="horizontal"
            tools:itemCount="2"
            tools:listitem="@layout/diet_food_row">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:drawableLeft="@drawable/ic_add"
            android:id="@+id/AddDietBreakfastButton"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/add_food" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/AddDietTextLunch"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/lunch"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/AddDietTextLunchCalories"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                tools:text="300kcal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/AddDietLaunchRecyclerView"
            android:layout_height="230dp"
            android:layout_width="match_parent"
            tools:itemCount="3"
            tools:listitem="@layout/diet_food_row" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:drawableLeft="@drawable/ic_add"
            android:id="@+id/AddDietLunchButton"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/add_food" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/AddDietTextDinner"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dinner"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/AddDietTextDinnerCalories"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                tools:text="300kcal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/AddDietDinnerRecyclerView"
            android:layout_height="230dp"
            android:layout_width="match_parent"
            tools:itemCount="3"
            tools:listitem="@layout/diet_food_row" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:drawableLeft="@drawable/ic_add"
            android:id="@+id/AddDietDinnerButton"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/add_food" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/AddDietTextSnack"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/snack"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/AddDietTextSnackCalories"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                tools:text="300kcal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/AddDietSnackRecyclerView"
            android:layout_height="230dp"
            android:layout_width="match_parent"
            tools:itemCount="3"
            tools:listitem="@layout/diet_food_row" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:drawableLeft="@drawable/ic_add"
            android:id="@+id/AddDietSnackButton"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/add_food" />

        <Switch
            android:id="@+id/AddDietMakePublicButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/make_public" />

        <Button
            android:id="@+id/AddDietCreateDietButton"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:text="Create Diet" />
    </LinearLayout>
</ScrollView>